<resources>
    <string name="app_name">SUST CSE COMMUNITY</string>
    <string name="email">Email</string>
    <string name="password"> Password </string>
    <string name="login">LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_as">Sign up as:</string>
    <string name="student_id">Student ID</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="new_here_create_an_account">New here? Create an account! </string>

    <array name="type">
        <item>Student</item>
        <item>Admin</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="log_in_as_admin">Log in as admin</string>
    <string name="log_out">Log out</string>


</resources>
