<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/downloadd"

        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="61dp"
            android:layout_marginTop="4dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.157" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="147dp"
            android:layout_marginTop="211dp"
            android:text="@string/log_in"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmail"
            app:boxBackgroundColor="#2E6AE1"
            android:layout_below="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edit"
            android:layout_marginLeft="30dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/editTextEmail"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_edit"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPass"
            android:layout_below="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit"
            android:layout_marginLeft="30dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edit"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_buttonID"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="134dp"
            android:layout_marginRight="125dp"
            android:background="#1152D3"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/create_accountID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_buttonID"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/new_here_create_an_account"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>




</ScrollView>