<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoSignup"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.157"
            app:srcCompat="@drawable/logo"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/logoSignup"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/register"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldName"
            app:boxBackgroundColor="#2E6AE1"
            android:layout_below="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edit"
            android:layout_marginLeft="30dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Name"
                android:inputType="textPersonName"
                android:background="@drawable/rounded_edit"
                android:layout_marginLeft="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldEmail"
            app:boxBackgroundColor="#2E6AE1"
            android:layout_width="match_parent"
            android:layout_below="@+id/fieldName"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit"
            android:layout_marginLeft="30dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_edit"
                android:layout_marginLeft="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldPass"
            android:layout_below="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit"
            android:layout_marginLeft="30dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edit"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPass"
            android:layout_below="@+id/fieldPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit"
            android:layout_marginLeft="30dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edit"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/spinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPass"
            android:orientation="horizontal"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_as"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/signupSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/type"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="30dp">


            </Spinner>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentId"
            android:layout_below="@+id/spinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit"
            android:layout_marginLeft="30dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/student_id"
                android:background="@drawable/rounded_edit"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/sign_up"
            android:background="#1152D3"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>

</ScrollView>